force-app/main/default/objects/User/fields/Check_Manager__c.field-meta.xml
<CustomField>
    <fullName>Check_Manager__c</fullName>
    <formula>IF( ManagerId = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in Trailmaker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>