force-app/main/default/objects/User/fields/Check_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Check_Mentor__c</fullName>
    <formula>IF( Mentor__c = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In Guide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>