force-app/main/default/objects/User/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <formula>On_boarding_End_Date__c -  Joining_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>