force-app/main/default/objects/User/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <label>Onboarding Start Date</label>
    <type>Date</type>
</CustomField>