force-app/main/default/objects/User/fields/Medals__c.field-meta.xml
<CustomField>
    <fullName>Medals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Medals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>