force-app/main/default/objects/User/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <label>Guide</label>
    <relationshipName>Mentor</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>