force-app/main/default/objects/User/fields/On_boarding_End_Date__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_End_Date__c</fullName>
    <label>On-boarding End Date</label>
    <type>Date</type>
</CustomField>