force-app/main/default/objects/User/fields/Reason_for_Onboarding_Extend__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Onboarding_Extend__c</fullName>
    <label>Reason for Onboarding Extend</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>