force-app/main/default/objects/User/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <label>Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>